# ggwrap

./: README.md  pyproject.toml  run_test.py  test.ipynb  tests.py
ggwrap/: README.md  __init__.py  heatmap.html
ggwrap/core/: __init__.py  heatmap.py
ggwrap/ops/: __init__.py  lit.py
ggwrap/test/: test_heatmap.py
images/: test_heatmap.html
